--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-TWILIO_ACCOUNT_SID=<Your Account SID>
-TWILIO_API_KEY_SID=<Your API Key>
-TWILIO_API_KEY_SECRET=<Your Secret Key>
-TWILIO_SYNC_SERVICE_SID=<Your Sync Service SID>
+TWILIO_ACCOUNT_SID=AC7e59d08f3e39d1d0d43e769f0f78e768
+TWILIO_API_KEY_SID=SKb89ba3cb7cc9953959a75b5dde0a024f
+TWILIO_API_KEY_SECRET=grwXbC98gPKvNYusvlJxWyobaprQeJDp
+TWILIO_SYNC_SERVICE_SID=IS2d5c7f498aa13e898f746418cdcfde03
